# imp_ror

./: .gitignore  Cargo.toml  README.md  config_imp_ror.toml
docs/: 1_Background.md  2_Installation and Configuration.md  3_Operation and Commands.md  4_Database Schemas.md  5_Coding Scripts.md  Background.md  Configuration and Initialisation.md  Database schemas.md  Operation and commands.md
sql/: create_countries_table.sql  create_lang_codes_table.sql  create_lup_tables.sql  create_ppr_tables.sql  create_scripts_table.sql  create_smm_tables.sql  create_src_tables.sql
src/: err.rs  error_defs.rs  lib.rs  main.rs
src/config/: config_editor.rs  config_helpers.rs  config_writer.rs  mod.rs
src/export/: export_csv.rs  export_helpers.rs  export_structs.rs  export_text.rs  mod.rs
src/extra/: acros.rs  load.rs  mod.rs  names.rs  prep.rs
src/import/: data_vectors.rs  json_models.rs  mod.rs  ror_create_tables.rs  ror_data_vectors.rs  ror_json_models.rs  src_create_tables.rs  src_data_vectors.rs
src/process/: data_importer.rs  data_processor.rs  data_transferrer.rs  mod.rs  ppr_create_tables.rs  ppr_data_importer.rs  ppr_data_processor.rs  ppr_rmv_dup_names.rs  ppr_script_coder.rs  process_names.rs  rmv_dup_names.rs  script_coder.rs  src_create_tables.rs  src_data_importer.rs  src_data_processor.rs  src_rmv_dup_names.rs  src_script_coder.rs
src/setup/: cli_reader.rs  config_editor.rs  config_reader.rs  config_writer.rs  db_pars.rs  log_helper.rs  lup_create_tables.rs  lup_fill_tables.rs  mod.rs
src/sql/: create_countries_table.rs  create_lang_codes_table.rs  create_lup_tables.rs  create_ppr_tables.rs  create_scripts_table.rs  create_smm_tables.rs  create_src_tables.rs  mod.rs  process_num_data.rs  transfer_to_ppr.rs
src/summarise/: mod.rs  smm_create_tables.rs  smm_helper.rs  smm_storer.rs  smm_structs.rs
tests/test_data/: v99-2030-01-01-test-data_schema_v2.json
tests/test_resources/: asrc_data_tests.rs  mod.rs  ppr_data_access.rs  (+8 more)
xtests/: test_entry.rs
(+6 files in other folders)
